# cudaopengl

./: CMakeLists.txt  README.md  main.cu
cmake/: LidanBuild.cmake
externel/glad/include/glad/: glad.h
externel/glad/src/: glad.cu
shader_tools/: GLSL_Program.cpp  GLSL_Program.h  Shader.cpp  Shader.h  gl_tools.h  glfw_tools.h  kernel.cu  shader_common.h
